# mcp-server-py

./: .gitignore  README.md  pyproject.toml
src/mcp_server_py/: __init__.py  client.py  mcp_server_config.py
